--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ python:
   - "3.5"
   - "3.5-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
-before_script: 
-sudo pip install ds18b20
-sudo apt-get install python-pip
-sudo apt-get install git
-sudo pip install gspread oauth2client
-
-script: README.md --allow-redirect --allow-dupe
+# command to install dependencies
+install: "pip install -r requirements.txt"
+# command to run tests
+script: nosetests
