--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
   - "3.4"
 
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: 
+sudo apt-get install python-pip
+sudo pip install gspread oauth2client
 # command to run tests
 script: nosetests
